--- a/style/footer.scss
+++ b/style/footer.scss
@@ -68,8 +68,3 @@
     }
   }
 }
-.home {
-  #footer {
-    margin-top: -100px;
-  }
-}
